--- a/batches/2021/2021-07-20-mate.md
+++ b/batches/2021/2021-07-20-mate.md
@@ -1,5 +1,6 @@
 # 2021-07-20 - 🌱 Yerba mate
 
+* **Recipe:** [🌱 Yerba mate](../../recipes/mate.md)
 * **Label:** KYmCb
 * **Brewing:** 2021-07-20
 * **Fermenting:** 2021-07-20
