--- a/batches/2021/2021-07-20-regular.md
+++ b/batches/2021/2021-07-20-regular.md
@@ -1,5 +1,6 @@
 # 2021-07-20 - 🍁 Regular
 
+* **Recipe:** [🍁 Regular](../../recipes/regular.md)
 * **Label:** K
 * **Brewing:** 2021-07-20
 * **Fermenting:** 2021-07-20
