--- a/batches/2021/2021-08-09-mate.md
+++ b/batches/2021/2021-08-09-mate.md
@@ -1,5 +1,6 @@
 # 2021-08-09 - 🌱 Yerba mate
 
+* **Recipe:** [🌱 Yerba mate](../../recipes/mate.md)
 * **Label:** KY
 * **Brewing:** 2021-08-08
 * **Fermenting:** 2021-08-09
