--- a/batches/2021/2021-08-09-mint.md
+++ b/batches/2021/2021-08-09-mint.md
@@ -1,5 +1,6 @@
 # 2021-08-09 - 🌿 Peppermint
 
+* **Recipe:** [🌿 Peppermint](../../recipes/mint.md)
 * **Label:** KP
 * **Brewing:** 2021-08-09
 * **Fermenting:** 2021-08-10
