--- a/batches/2021/2021-08-08-mate.md
+++ b/batches/2021/2021-08-08-mate.md
@@ -2,6 +2,7 @@
 
 * **Recipe:** [🌱 Yerba mate](../../recipes/mate.md)
 * **Label:** KY
+* **Color:** purple
 * **Brewing:** 2021-08-08
 * **Fermenting:** 2021-08-09
 * **Bottling:**
