--- a/batches/2021/2021-08-09-mint.md
+++ b/batches/2021/2021-08-09-mint.md
@@ -2,6 +2,7 @@
 
 * **Recipe:** [🌿 Peppermint](../../recipes/mint.md)
 * **Label:** KP
+* **Color:** red
 * **Brewing:** 2021-08-09
 * **Fermenting:** 2021-08-10
 * **Bottling:**
