--- a/batches/2021/2021-08-08-mate.md
+++ b/batches/2021/2021-08-08-mate.md
@@ -7,3 +7,10 @@
 * **Fermenting:** 2021-08-09
 * **Bottling:**
 * **Chilling:**
+
+## Bottles
+
+* 1 L **[#2]**
+* 750 ml **[#3]**
+* 750 ml **[#4]**
+* 750 ml **[#5]**
