--- a/batches/2021/2021-08-20-coffee.md
+++ b/batches/2021/2021-08-20-coffee.md
@@ -2,7 +2,7 @@
 
 * **Recipe:** [☕️ Coffee](../../recipes/coffee.md)
 * **Label:** KC
-* **Color:** Red
+* **Color:** red
 * **Brewing:** 2021-08-20 18:17:46
 * **Fermenting:**
 * **Bottling:**
