--- a/batches/2021/2021-08-20-mate.md
+++ b/batches/2021/2021-08-20-mate.md
@@ -2,7 +2,7 @@
 
 * **Recipe:** [🌱 Yerba mate](../../recipes/mate.md)
 * **Label:** KY
-* **Color:** Blue
+* **Color:** blue
 * **Brewing:** 2021-08-20 18:17:34
 * **Fermenting:**
 * **Bottling:**
