--- a/batches/2021/2021-08-20-coffee.md
+++ b/batches/2021/2021-08-20-coffee.md
@@ -14,3 +14,9 @@
 * 2021-08-30 17:42:39: 6.75
 * 2021-09-02 08:51:05: 7
 * 2021-09-04 12:01:39: 7
+
+## Notes
+
+On 2021-09-04, added 1/2 cup of extra starter, because the 1 tablespoon
+in the recipe I followed seem to be way too little, it's barely
+fermenting.
