--- a/batches/2021/2021-08-20-koffucha.md
+++ b/batches/2021/2021-08-20-koffucha.md
@@ -1,6 +1,6 @@
-# 2021-08-20 - ☕️ Coffee
+# 2021-08-20 - ☕️ Koffucha
 
-* **Recipe:** [☕️ Coffee](../../recipes/coffee.md)
+* **Recipe:** [☕️ Koffucha](../../recipes/koffucha.md)
 * **Label:** KC
 * **Color:** red
 * **Brewing:** 2021-08-20 18:17:46
@@ -9,6 +9,10 @@
 * **Chilling:** 2021-09-07 07:50:52
 
 ## Notes
+
+Unlike in the current version of the recipe, this batch was brewed with
+167 g of coffee to reach a 1:17 ratio based on 3 quarts of water (2.839
+L).
 
 On 2021-09-04, added 1/2 cup of extra starter, because the 1 tablespoon
 in the recipe I followed seem to be way too little, it's barely
