--- a/batches/2021/2021-10-12-koffucha.md
+++ b/batches/2021/2021-10-12-koffucha.md
@@ -6,7 +6,7 @@
 * **Brewing:** 2021-10-12 20:16:28
 * **Fermenting:** 2021-10-13 09:21:18
 * **Bottling:** 2021-11-01 18:35:41
-* **Chilling:**
+* **Chilling:** N/A
 
 ## Brix readings
 
