--- a/batches/2021/2021-10-12-regular.md
+++ b/batches/2021/2021-10-12-regular.md
@@ -6,7 +6,7 @@
 * **Brewing:** 2021-10-12 20:16:40
 * **Fermenting:** 2021-10-13 09:21:21
 * **Bottling:** 2021-11-01 19:04:30
-* **Chilling:**
+* **Chilling:** N/A
 
 ## Brix readings
 
