--- a/batches/2022/2022-02-06-regular.md
+++ b/batches/2022/2022-02-06-regular.md
@@ -6,7 +6,7 @@
 * **Brewing:** 2022-02-06 18:24:59
 * **Fermenting:** 2022-02-07 08:09:36
 * **Bottling:** 2022-02-25 10:18:09
-* **Chilling:**
+* **Chilling:** N/A
 
 ## Bottles
 
