--- a/batches/2022/2022-02-06-mate.md
+++ b/batches/2022/2022-02-06-mate.md
@@ -6,7 +6,7 @@
 * **Brewing:** 2022-02-06 18:25:08
 * **Fermenting:** 2022-02-07 08:09:45
 * **Bottling:** 2022-02-25 10:18:19
-* **Chilling:**
+* **Chilling:** N/A
 
 ## Bottles
 
